clusters/hetzner/apps/networking/istio/app/authz.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authentik-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingress
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - "*.infra.behn.dev"
            notHosts:
              - grafana.infra.behn.dev
